2008-07-21  Gary Benson  <gbenson@redhat.com>

	PR icedtea/170:
	* patches/icedtea-zero-build.patch: Build class library with
	-D_LITTLE_ENDIAN where appropriate.

2008-07-21  Gary Benson  <gbenson@redhat.com>

	* HACKING: Added instructions for how to regenerate
	icedtea-hotspot-6b06-7b24.patch.

2008-07-20  Matthias Klose  <doko@ubuntu.com>

	* patches/icedtea-nomotif-6706121.patch, patches/icedtea-nomotif.patch:
	New.
	* Makefile.am (ICEDTEA_PATCHES): Add patches.
	* configure.ac: Remove lesstif check.
	* INSTALL: Remove lesstif from build requirements.

2008-07-20  Matthias Klose  <doko@ubuntu.com>

	* acinclude.m4 (SET_ARCH_DIRS): Add powerpc and powerpc64 configs.

2008-07-16  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Fixed typos.

2008-07-16  Matthias Klose  <doko@ubuntu.com>

	* fsg.sh: Update for b11 code drop.
	* Makefile.am: Update for b11.
	* patches/icedtea-license-headers.patch, patches/icedtea-idl.patch,
	patches/icedtea-jscheme.patch, patches/icedtea-security-updates.patch,
	patches/icedtea-eclipse-hotspot-6614100-6b06.patch,
	patches/icedtea-gtkplaf.patch, patches/icedtea-dnd-updatecursor.patch,
	patches/icedtea-component.patch: Remove, applied upstream.
	* HACKING: Update patch descriptions.
	* NEWS: Mention update to b11.

2008-07-15  Lillian Angel  <langel@redhat.com>

	* Makefile.am: Added new patch.
	* patches/icedtea-security-updates.patch: Removed patch that cannot be
	applied to ports.
	* patches/icedtea-security-updates-nonzero.patch: Added removed patch
	into this file.

2008-07-15  Lillian Angel  <langel@redhat.com>

	* INSTALL: Added rhino to the list.

2008-07-15  Lillian Angel  <langel@redhat.com>

	* .hgignore: Updated.
	* Makefile.am: Added HACKING to EXTRA_DIST.

2008-07-15  Joshua Sumali  <jsumali@redhat.com>

	* Makefile.am: Add icedtea-webstart-umask.patch.
	* patches/icedtea-webstart-umask.patch: Set default umask to 077 for
	javaws and pluginappletviewer, and also	provide the -umask argument to