@@ -136,29 +136,61 @@ diff -ru openjdk/hotspot/src/share/vm/utilities/vmError.cpp openjdk/hotspot/src/
 diff -r 789c601c8ba9 openjdk/hotspot/src/os/linux/vm/os_linux.cpp
 --- openjdk/hotspot/src/os/linux/vm/os_linux.cpp	Tue Apr 01 14:49:28 2008 +0100
 +++ openjdk/hotspot/src/os/linux/vm/os_linux.cpp	Wed Apr 02 09:51:37 2008 +0100
-@@ -1690,7 +1690,8 @@ void * os::dll_load(const char *filename
-     {EM_SPARC32PLUS, EM_SPARC,   ELFCLASS32, ELFDATA2MSB, (char*)"Sparc 32"},
-     {EM_SPARCV9,     EM_SPARCV9, ELFCLASS64, ELFDATA2MSB, (char*)"Sparc v9 64"},
-     {EM_PPC,         EM_PPC,     ELFCLASS32, ELFDATA2MSB, (char*)"Power PC 32"},
+@@ -1669,15 +1669,17 @@
+   #endif
+ 
+   static const arch_t arch_array[]={
+-    {EM_386,         EM_386,     ELFCLASS32, ELFDATA2LSB, (char*)"IA 32"},
+-    {EM_486,         EM_386,     ELFCLASS32, ELFDATA2LSB, (char*)"IA 32"},
+-    {EM_IA_64,       EM_IA_64,   ELFCLASS64, ELFDATA2LSB, (char*)"IA 64"},
+-    {EM_X86_64,      EM_X86_64,  ELFCLASS64, ELFDATA2LSB, (char*)"AMD 64"},
+-    {EM_SPARC,       EM_SPARC,   ELFCLASS32, ELFDATA2MSB, (char*)"Sparc 32"},
+-    {EM_SPARC32PLUS, EM_SPARC,   ELFCLASS32, ELFDATA2MSB, (char*)"Sparc 32"},
+-    {EM_SPARCV9,     EM_SPARCV9, ELFCLASS64, ELFDATA2MSB, (char*)"Sparc v9 64"},
+-    {EM_PPC,         EM_PPC,     ELFCLASS32, ELFDATA2MSB, (char*)"Power PC 32"},
 -    {EM_PPC64,       EM_PPC64,   ELFCLASS64, ELFDATA2MSB, (char*)"Power PC 64"}
-+    {EM_PPC64,       EM_PPC64,   ELFCLASS64, ELFDATA2MSB, (char*)"Power PC 64"},
-+    {EM_ARM,         EM_ARM,     ELFCLASS32, ELFDATA2LSB, (char*)"ARM"}
++    {EM_386,         EM_386,     ELFCLASS32,   ELFDATA2LSB, (char*)"IA 32"},
++    {EM_486,         EM_386,     ELFCLASS32,   ELFDATA2LSB, (char*)"IA 32"},
++    {EM_IA_64,       EM_IA_64,   ELFCLASS64,   ELFDATA2LSB, (char*)"IA 64"},
++    {EM_X86_64,      EM_X86_64,  ELFCLASS64,   ELFDATA2LSB, (char*)"AMD 64"},
++    {EM_SPARC,       EM_SPARC,   ELFCLASS32,   ELFDATA2MSB, (char*)"Sparc 32"},
++    {EM_SPARC32PLUS, EM_SPARC,   ELFCLASS32,   ELFDATA2MSB, (char*)"Sparc 32"},
++    {EM_SPARCV9,     EM_SPARCV9, ELFCLASS64,   ELFDATA2MSB, (char*)"Sparc v9 64"},
++    {EM_PPC,         EM_PPC,     ELFCLASS32,   ELFDATA2MSB, (char*)"Power PC 32"},
++    {EM_PPC64,       EM_PPC64,   ELFCLASS64,   ELFDATA2MSB, (char*)"Power PC 64"},
++    {EM_ARM,         EM_ARM,     ELFCLASS32,   ELFDATA2LSB, (char*)"ARM"},
++    {EM_S390,        EM_S390,    ELFCLASSNONE, ELFDATA2MSB, (char*)"IBM System/390"}
    };
  
    #if  (defined IA32)
-@@ -1707,9 +1708,11 @@ void * os::dll_load(const char *filename
+@@ -1694,9 +1696,13 @@
      static  Elf32_Half running_arch_code=EM_PPC64;
    #elif  (defined __powerpc__)
      static  Elf32_Half running_arch_code=EM_PPC;
 +  #elif  (defined ARM)
 +    static  Elf32_Half running_arch_code=EM_ARM;    
++  #elif  (defined S390)
++    static  Elf32_Half running_arch_code=EM_S390;
    #else
      #error Method os::dll_load requires that one of following is defined:\
 -         IA32, AMD64, IA64, __sparc, __powerpc__
-+         IA32, AMD64, IA64, __sparc, __powerpc__, ARM
++         IA32, AMD64, IA64, __sparc, __powerpc__, ARM, S390
    #endif
  
    // Identify compatability class for VM's architecture and library's architecture
+@@ -1728,10 +1734,12 @@
+     return NULL;
+   }
+ 
++#ifndef S390
+   if (lib_arch.elf_class != arch_array[running_arch_index].elf_class) {
+     ::snprintf(diag_msg_buf, diag_msg_max_length-1," (Possible cause: architecture word width mismatch)");
+     return NULL;
+   }
++#endif // !S390
+ 
+   if (lib_arch.compat_class != arch_array[running_arch_index].compat_class) {
+     if ( lib_arch.name!=NULL ) {
 diff -r 3e7fbd955f0b openjdk/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp
 --- openjdk/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp	Thu Jul 10 14:08:04 2008 -0400
 +++ openjdk/hotspot/src/share/vm/interpreter/bytecodeInterpreter.cpp	Thu Jul 10 14:11:25 2008 -0400
